# open-aoi

./: .dockerignore  .env  .gitignore  Dockerfile  INICIAR_CAMERA.bat  Pick_Place.txt  ReadMe.md  aoi.build.bash  aoi.install.bash  aoi.launch.bash  blueprint.drawio  camera_server.py  check_db.py  design.drawio  docker-compose.yml  dockerfile.aoi-ros2  import_pnp_to_db.py  requirements.txt
launch/: aoi.py
open_aoi/: .gitignore  aoi.build.bash  aoi.install.bash  requirements.txt
open_aoi/launch/: aoi.py
open_aoi/open_aoi/: requirements.txt
open_aoi_core/: requirements.txt
open_aoi_ros/: aoi.build.bash  aoi.install.bash  aoi.setup.bash  requirements.txt
playground/: ARQUITETURA_DIAGRAMAS.md  GUIA_INTEGRACAO_ALINHAMENTO.md  INTEGRACAO_AUTOMATICA.md  ONDE_FAZER_UPLOAD.md  QUICK_START.md  README.md  RESUMO_EXECUTIVO.md  TESTE_PRATICO.md  requirements.txt  settings.py  test_ros2.ipynb
src/open_aoi_interfaces/: CMakeLists.txt  package.xml
src/open_aoi_interfaces/msg/: ControlLog.msg  InspectionTarget.msg
src/open_aoi_interfaces/srv/: ControlExecutionTrigger.srv  GPIOTrigger.srv  IdentificationTrigger.srv  ImageAcquisitionTrigger.srv  InspectionExecutionTrigger.srv  InspectionTrigger.srv  ServiceStatus.srv
src/open_aoi_services/: package.xml  setup.cfg  setup.py
src/open_aoi_services/open_aoi_ros_services/: service_mediator.py  service_product_identification.py
src/open_aoi_services/open_aoi_services/: service_control_execution.py  service_image_acquisition.py  service_inspection_execution.py  service_mediator.py  service_product_identification.py
(+238 files in other folders)
