<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>open_aoi_interfaces</name>
  <description>Packag with interfaces for Open AOI ROS services</description>
  <license>MIT License</license>
  <version>0.0.1</version>
  <maintainer email="chrnyaevek@gmail.com">egor</maintainer>
  
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
